[package]
name = "tiny-hnsw"
version = "1.0.0-alpha.4"
edition = "2024"
authors = ["ronakgh {ronakgh97@gmail.com}"]
description = "A simplfied implementation of the HNSW (Hierarchical Navigable Small World) algorithm for efficient approximate nearest neighbor search."
license = "MIT"
repository = "https://github.com/ronakgh97/hnsw-rs"
readme = "README.md"
categories = ["data-structures", "mathematics", "algorithms", "science"]
keywords = ["hnsw", "nearest-neighbor", "search", "proxy-graph", "simd"]

[lib]
name = "hnsw_rs"
path = "src/lib.rs"

[[bench]]
name = "bencher"
path = "bench/bench.rs"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false

[profile.dev]
opt-level = 1
debug = true
incremental = true

[dependencies]
wincode = { version = "0.5.5", features = ["derive"] }
memmap2 = "0.9.11"
ahash = "0.8.12"
wide = "1.5.0"
rayon = "1.12.0"
sha2 = "0.11.0"
anyhow = "1.0.103"
hex = "0.4.3"
fastrand = "2.4.1"
# aligned-vec = "0.6.4"

[dev-dependencies]
arrow = "59.0.0"
parquet = "59.0.0"
plotters = "0.3.7"